# YuvWater

./: README.md  app-debug_demo.apk  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wzh/yuvwater/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: YuvOsdUtils.c  YuvOsdUtils.h
app/src/main/java/com/wzh/yuvwater/: CreateNumberAct.java  MainActivity.java
app/src/main/java/com/wzh/yuvwater/jni/: YuvOsdUtils.java
app/src/main/java/com/wzh/yuvwater/monitor/: CameraWrapper.java  MediaCodecManager.java  MonitorVideoManager.java  MuxerData.java  MuxerManager.java
app/src/main/java/com/wzh/yuvwater/utils/: FileUtil.java  JavaTest.java  Logger1.java  ThreadManager.java  Utils.java
app/src/main/res/layout/: act_create_num.xml  activity_main.xml  item_image_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wzh/yuvwater/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
